# genshinautologin

./: .gitignore  README.md  build.py  main.py  main.spec  pyproject.toml  requirements.txt  setup.py
genshinautocheckin/: main.py
