[tool.poetry]
name = "genshinautocheckin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
genshinstats = "^1.4.11"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.7"

[tool.poetry.scripts]
build = 'scripts.build.pyinstaller:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
